# theta

./: .gitignore  BACKLOG.md  Cargo.toml  README.md
.agent/workflows/: deploy.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: accounting_service.rs  analysis_service.rs  analytics.rs  config.rs  daemon_protocol.rs  diagnostics.rs  domain.rs  ledger.rs  lib.rs  margin_engine.rs  market_data.rs  portfolio_service.rs  rate.rs  risk_domain.rs  risk_engine.rs  runtime.rs  screening_service.rs  service.rs  signal_service.rs  snapshot_store.rs  strategy_service.rs
core/src/cli/: mod.rs  portfolio.rs  snapshot.rs
core/src/cli/ops/: account_monitor.rs  health_check.rs  mod.rs  strategy_capture.rs  strategy_history.rs  strategy_monitor.rs
core/src/cli/signals/: alert.rs  capture.rs  extreme.rs  history.rs  iv_rank.rs  mod.rs  put_call_monitor.rs  relative_extreme.rs
core/src/cli/structure/: market_tone.rs  mod.rs  put_call_bias.rs  skew.rs  smile.rs  term_structure.rs
core/tests/: theta_cli.rs
daemon/: Cargo.toml
daemon/src/: backend.rs  cache.rs  main.rs
deploy/: account-monitor.service  capture-signals.service  install-taskd.sh  install.sh  release-placeholder.timer  theta-daemon.service  theta-healthcheck.service  theta-healthcheck.timer  update.sh
deploy/taskd/: install-taskd.sh  tasks.yaml.example
integrations/: README.md
integrations/openclaw/: README.md  install.sh  sync_ledger.py
integrations/openclaw/skills/theta/: SKILL.md
integrations/tellar/: install.sh
integrations/tellar/skills/theta/: SKILL.md
integrations/tellar/skills/theta-ops/: SKILL.md
integrations/tellar/skills/theta-portfolio/: SKILL.md
integrations/tellar/skills/theta-signals/: SKILL.md
integrations/tellar/skills/theta-snapshot/: SKILL.md
integrations/tellar/skills/theta-structure/: SKILL.md
scripts/: sync_ledger.py  theta.sh
skills/account-monitor/: SKILL.md
skills/account-monitor/scripts/: account-monitor.sh
skills/capture-signals/: SKILL.md
skills/capture-signals/scripts/: capture-signals.sh
skills/iv-rank/: SKILL.md
skills/iv-rank/scripts/: iv-rank.sh
skills/market-extreme/: SKILL.md
skills/market-extreme/scripts/: market-extreme.sh
skills/market-tone/: SKILL.md
skills/market-tone/scripts/: market-tone.sh
skills/portfolio/: SKILL.md
skills/portfolio/scripts/: portfolio.sh
skills/put-call-bias/: SKILL.md
skills/put-call-bias/scripts/: put-call-bias.sh
skills/relative-extreme/: SKILL.md
skills/relative-extreme/scripts/: relative-extreme.sh
skills/signal-history/: SKILL.md
skills/signal-history/scripts/: signal-history.sh
skills/skew/: SKILL.md
skills/skew/scripts/: skew.sh
skills/smile/: SKILL.md
skills/smile/scripts/: smile.sh
skills/snapshot/: SKILL.md
skills/snapshot/scripts/: snapshot.sh
skills/term-structure/: SKILL.md
skills/term-structure/scripts/: term-structure.sh
skills/theta/: SKILL.md
skills/theta/scripts/: remote-theta.sh
src/: accounting_service.rs  analysis_service.rs  analytics.rs  domain.rs  ledger.rs  lib.rs  margin_engine.rs  market_data.rs  portfolio_service.rs  risk_domain.rs  risk_engine.rs  screening_service.rs  service.rs  signal_service.rs  snapshot_store.rs
