[package]
name = "theta"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"

[[bin]]
name = "capture-signals"
path = "src/bin/capture_signals.rs"

[[bin]]
name = "signal-history"
path = "src/bin/signal_history.rs"

[[bin]]
name = "iv-rank"
path = "src/bin/iv_rank.rs"

[[bin]]
name = "portfolio"
path = "src/bin/portfolio.rs"

[[bin]]
name = "skew"
path = "src/bin/skew.rs"

[[bin]]
name = "smile"
path = "src/bin/smile.rs"

[[bin]]
name = "put-call-bias"
path = "src/bin/put_call_bias.rs"

[[bin]]
name = "market-tone"
path = "src/bin/market_tone.rs"

[[bin]]
name = "market-extreme"
path = "src/bin/market_extreme.rs"

[[bin]]
name = "relative-extreme"
path = "src/bin/relative_extreme.rs"

[[bin]]
name = "term-structure"
path = "src/bin/term_structure.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15"
rust-mcp-sdk = { version = "0.8.3", features = ["server", "stdio", "macros"] }
schemars = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = [
  "parsing",
  "formatting",
  "macros",
  "serde",
] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3.32"
